IE Fix voor header en footer overflowing

--- a/css/main/main.less
+++ b/css/main/main.less
@@ -1,4 +1,8 @@
-﻿u {
+﻿body {
+	overflow-x: hidden;
+}
+
+u {
 	text-decoration: none;
 }
 .test-mode {
